--- a/Tsltn/App.xaml
+++ b/Tsltn/App.xaml
@@ -2,8 +2,29 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Tsltn"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             Startup="OnStartup">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+
+            </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="Window">
+                <Style.Setters>
+                    <Setter Property="FontSize" Value="16"/>
+                    <Setter Property="TextOptions.TextFormattingMode" Value="Display"/>
+                </Style.Setters>
+            </Style>
+
+            <Style TargetType="MenuItem">
+                <Style.Setters>
+                    <Setter Property="MinWidth" Value="70"/>
+                </Style.Setters>
+            </Style>
+
+            
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
