--- a/Tsltn/MainWindow.xaml
+++ b/Tsltn/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tsltn"
-   
+        xmlns:r ="clr-namespace:Tsltn.Resources"
         mc:Ignorable="d"
         Height="450" Width="800"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
@@ -17,17 +17,21 @@
     </Window.Resources>
     <Window.CommandBindings>
         <CommandBinding Command="Help" Executed="Help_Executed" />
-        <CommandBinding Command="Open" Executed="Open_Executed"/>
+        <CommandBinding Command="Open" Executed="Open_ExecutedAsync"/>
         <CommandBinding Command="Close" Executed="Close_Executed"  CanExecute="Close_CanExecute"/>
-        <CommandBinding Command="Save" Executed="SaveAs_Executed" CanExecute="Close_CanExecute"/>
-        <CommandBinding Command="SaveAs" Executed="SaveAs_Executed"  CanExecute="Close_CanExecute"/>
-        <CommandBinding Command="local:TsltnCommand.Translate" Executed="Translate_Executed"  CanExecute="Close_CanExecute"></CommandBinding>
+        <CommandBinding Command="Save" Executed="Save_ExecutedAsync" CanExecute="Close_CanExecute"/>
+        <CommandBinding Command="SaveAs" Executed="SaveAs_ExecutedAsync"  CanExecute="Close_CanExecute"/>
+        <CommandBinding Command="New" Executed="New_Executed"/>
+        <CommandBinding Command="local:TsltnCommand.Translate" Executed="Translate_ExecutedAsync"  CanExecute="Close_CanExecute"></CommandBinding>
     </Window.CommandBindings>
     <DockPanel>
         
         <Menu DockPanel.Dock="Top" FontSize="16">
         <MenuItem Header="_Datei" Padding="8,4">
-            <MenuItem Command="Open">
+                <MenuItem Command="New">
+                    
+                </MenuItem>
+                <MenuItem Command="Open">
                 <MenuItem.Icon>
                     <Image Width="16" Height="16" Source="pics/Open_16x.png"></Image>
                 </MenuItem.Icon>
