--- a/Tsltn/TsltnControl.xaml
+++ b/Tsltn/TsltnControl.xaml
@@ -1,22 +1,22 @@
-﻿<Page x:Class="Tsltn.TsltnPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Tsltn"
-      xmlns:r ="clr-namespace:Tsltn.Resources"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Background="WhiteSmoke"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}"
-      FontSize="16">
-    <Page.Resources>
+﻿<UserControl x:Class="Tsltn.TsltnControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:Tsltn"
+             xmlns:r ="clr-namespace:Tsltn.Resources"
+             xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="WhiteSmoke"
+             FontSize="16">
+    <UserControl.Resources>
         <Style x:Key="HeaderTextBlock" TargetType="TextBlock">
             <Style.Setters>
-            <Setter Property="TextAlignment" Value="Center"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Background" Value="Black"/>
-            <Setter Property="Foreground" Value="White"/>
+                <Setter Property="TextAlignment" Value="Center"/>
+                <Setter Property="FontWeight" Value="Bold"/>
+                <Setter Property="Background" Value="Black"/>
+                <Setter Property="Foreground" Value="White"/>
             </Style.Setters>
         </Style>
         <Style TargetType="Button">
@@ -30,15 +30,15 @@
                 <Setter Property="Padding" Value="7,2,7,2"/>
             </Style.Setters>
         </Style>
-    </Page.Resources>
-    <Page.CommandBindings>
+    </UserControl.Resources>
+    <UserControl.CommandBindings>
         <CommandBinding Command="PreviousPage" CanExecute="PreviousPage_CanExecute" Executed="PreviousPage_Executed"/>
         <CommandBinding Command="NextPage" CanExecute="NextPage_CanExecute" Executed="NextPage_Executed"/>
         <CommandBinding Command="BrowseForward" CanExecute="BrowseForward_CanExecute" Executed="BrowseForward_Executed"/>
-        <CommandBinding Command="{x:Static local:TsltnPageCommand.CopyXml}" Executed="CopyXml_Executed"/>
-        <CommandBinding Command="{x:Static local:TsltnPageCommand.CopyText}" Executed="CopyText_Executed"/>
-        <CommandBinding Command="{x:Static local:TsltnPageCommand.BrowseAll}" Executed="BrowseAll_Executed"/>
-    </Page.CommandBindings>
+        <CommandBinding Command="{x:Static local:TsltnControlCommand.CopyXml}" Executed="CopyXml_Executed"/>
+        <CommandBinding Command="{x:Static local:TsltnControlCommand.CopyText}" Executed="CopyText_Executed"/>
+        <CommandBinding Command="{x:Static local:TsltnControlCommand.BrowseAll}" Executed="BrowseAll_Executed"/>
+    </UserControl.CommandBindings>
     <Grid Margin="10,0,10,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -54,7 +54,7 @@
 
         <DockPanel Grid.ColumnSpan="2">
             <local:NavigationUserControl x:Name="NavCtrl" DockPanel.Dock="Right" Margin="5"/>
-            
+
             <Grid DockPanel.Dock="Left" VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -81,26 +81,26 @@
                 </Grid.Resources>
                 <Label Content="{x:Static r:Res.SourceLanguage}"/>
                 <Label Grid.Row="1" Content="{x:Static r:Res.TargetLanguage}" VerticalAlignment="Top"/>
-                <TextBox Name="_tbSourceLanguage" Grid.Column="1" Text="{Binding SourceLanguage, UpdateSourceTrigger=Explicit}" VerticalAlignment="Center"/>
-                <TextBox Name="_tbTargetLanguage" Grid.Column="1" Grid.Row="1" Text="{Binding TargetLanguage, UpdateSourceTrigger=Explicit}" VerticalAlignment="Top"/>
+                <TextBox Name="_tbSourceLanguage" Grid.Column="1" Text="{Binding SourceLanguage, UpdateSourceTrigger=Explicit}" VerticalAlignment="Center"
+                         AcceptsReturn="False" AcceptsTab="False"/>
+                <TextBox Name="_tbTargetLanguage" Grid.Column="1" Grid.Row="1" Text="{Binding TargetLanguage, UpdateSourceTrigger=Explicit}" VerticalAlignment="Top"
+                         AcceptsReturn="False" AcceptsTab="False"/>
 
                 <TextBlock Grid.Column="2" DockPanel.Dock="Left" VerticalAlignment="Center" Text="{x:Static r:Res.SourceFile}"/>
                 <TextBlock Grid.Column="2" Grid.Row="1" DockPanel.Dock="Left" VerticalAlignment="Top" Text="{x:Static r:Res.NodePath}"/>
                 <TextBlock Grid.Column="3" TextTrimming="CharacterEllipsis" Text="{Binding SourceFileName, Mode=OneTime}" VerticalAlignment="Top"/>
-                
-                
+
+
                 <ScrollViewer Grid.Column="3" Grid.Row="1" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Visible" CanContentScroll="True">
                     <TextBlock Text="{Binding NodePath}" VerticalAlignment="Top"/>
 
                 </ScrollViewer>
-               
 
-                <!--
-                <TextBlock Grid.Column="3" Grid.Row="1" Text="{Binding NodePath}" VerticalAlignment="Center"/>
-                -->
+
+
             </Grid>
-            
-            
+
+
         </DockPanel>
 
         <TextBlock Grid.Row="1" Style="{StaticResource HeaderTextBlock}" Text="{x:Static r:Res.Original}"/>
@@ -108,7 +108,7 @@
             <TextBlock.Style>
                 <Style TargetType="TextBlock" BasedOn="{StaticResource HeaderTextBlock}">
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding HasTranslation}" Value="False">
+                        <DataTrigger Binding="{Binding HasTranslation, Mode=OneWay}" Value="False">
                             <DataTrigger.Setters>
                                 <Setter Property="Background" Value="Gray"/>
                                 <Setter Property="Foreground" Value="Black"/>
@@ -119,31 +119,32 @@
             </TextBlock.Style>
         </TextBlock>
         <Button Name="_btnReset" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right"
-                Content="{x:Static r:Res.Reset}" IsEnabled="{Binding HasTranslation}" Click="_btnReset_Click"/>
+                Content="{x:Static r:Res.Reset}" Click="_btnReset_Click" IsEnabled="{Binding HasTranslation}"/>
 
 
 
         <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" CanContentScroll="True">
             <TextBlock Text="{Binding InnerXml}" TextWrapping="WrapWithOverflow"/>
+
         </ScrollViewer>
         <TextBox Name="_tbTranslation" Grid.Row="2" Grid.Column="1" Text="{Binding Translation, UpdateSourceTrigger=Explicit}"
                  GotKeyboardFocus="_tbTranslation_GotKeyboardFocus"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  ScrollViewer.CanContentScroll="True"/>
-        
+
         <Grid Grid.Row="3">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Command="local:TsltnPageCommand.CopyXml" Content="{x:Static r:Res.CopyXml}"/>
-                <Button Command="local:TsltnPageCommand.CopyText" Content="{x:Static r:Res.CopyText}"/>
+                <Button Command="local:TsltnControlCommand.CopyXml" Content="{x:Static r:Res.CopyXml}"/>
+                <Button Command="local:TsltnControlCommand.CopyText" Content="{x:Static r:Res.CopyText}"/>
             </StackPanel>
             <Button Command="PreviousPage" Content="{x:Static r:Res.Previous}" HorizontalAlignment="Left"></Button>
             <Button Command="NextPage" HorizontalAlignment="Right" Content="{x:Static r:Res.Next}"/>
         </Grid>
 
-        <Button Grid.Column="1" Grid.Row="3" DockPanel.Dock="Top" HorizontalAlignment="Center" Command="local:TsltnPageCommand.BrowseAll" Content="{x:Static r:Res.BrowseAll}"></Button>
+        <Button Grid.Column="1" Grid.Row="3" DockPanel.Dock="Top" HorizontalAlignment="Center" Command="local:TsltnControlCommand.BrowseAll" Content="{x:Static r:Res.BrowseAll}"></Button>
 
         <GridSplitter Grid.Row="3" Grid.ColumnSpan="2"></GridSplitter>
         <ListBox Grid.Row="4" Grid.ColumnSpan="2"></ListBox>
     </Grid>
-</Page>
+</UserControl>
